8213189: Make restricted headers in HTTP Client configurable and remove Date by default
Reviewed-by: dfuchs